# inventory-management-cpp

./: README.md
inventory-management-cli/: Makefile  README.md
inventory-management-cli/sql/: db_init.sql
inventory-management-cli/src/utils/: Utils.cpp  Utils.h
inventory-management-gui/InventoryAppGUI/: CMakeCache.txt  CMakeLists.txt  InventoryAppGUI  README.md  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
inventory-management-gui/InventoryAppGUI/InventoryAppGUI_autogen/: deps
inventory-management-gui/InventoryAppGUI/InventoryAppGUI_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
inventory-management-gui/InventoryAppGUI/src/: main.cpp
inventory-management-gui/InventoryAppGUI/src/database/: DatabaseManager.cpp  DatabaseManager.h
inventory-management-gui/InventoryAppGUI/src/inventory/: ItemInventaris.cpp  ItemInventaris.h
